tests/fixtures/invalid/pow_set_float_str.py
# Cannot call pow() with Set[int], Float, Str
x = pow({1, 2, 3}, 1.0, "hello")
